<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Richardson - CS3270A7</string>
    <string name="action_settings">Settings</string>

    <string name="stringIdLabel">Id:</string>
    <string name="stringNameLabel">Name:</string>
    <string name="stringCourseCodeLabel">Course Code:</string>
    <string name="stringStartLabel">Starts At:</string>
    <string name="stringEndLabel">Ends At:</string>
    <string name="stringCancel">Cancel</string>
    <string name="stringAdd">Add</string>
    <string name="stringImport">Import</string>
    <string name="stringEdit">Edit</string>
    <string name="stringDelete">Delete</string>
    <string name="stringSaveCourse">Save Course</string>
    <string name="stringId">Id (Required)</string>
    <string name="stringName">Name (Required)</string>
    <string name="stringCourseCode">Course Code</string>
    <string name="stringStart">Starts At</string>
    <string name="stringEnd">Ends At</string>
    <string name="stringNoCourses">No Courses</string>
    <string name="stringGettingData">Getting Data...</string>
    <string name="stringNoAssignments">No Assignments</string>
    <string name="stringError">You must enter a course name</string>
    <string name="stringConfirmMessage">This will permanently delete the course</string>
    <string name="stringConfirm">Are You Sure?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
