<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/detailsScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="vertical"
        android:useDefaultMargins="true" >

        <TextView
            android:id="@+id/textIdLabel"
            style="@style/Label"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/stringIdLabel" />

        <TextView
            android:id="@+id/textIdValue"
            android:layout_column="1"
            android:layout_row="0"
            style="@style/Value" />

        <TextView
            android:id="@+id/textNameLabel"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/stringNameLabel"
            style="@style/Label" />

        <TextView
            android:id="@+id/textNameValue"
            android:layout_column="1"
            android:layout_row="1"
            style="@style/Value" />

        <TextView
            android:id="@+id/textCourseCodeLabel"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/stringCourseCodeLabel"
            style="@style/Label" />

        <TextView
            android:id="@+id/textCourseCodeValue"
            android:layout_column="1"
            android:layout_row="2"
            style="@style/Value" />

        <TextView
            android:id="@+id/textStartLabel"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/stringStartLabel"
            style="@style/Label" />

        <TextView
            android:id="@+id/textStartValue"
            android:layout_column="1"
            android:layout_row="3"
            style="@style/Value" />

        <TextView
            android:id="@+id/textEndLabel"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/stringEndLabel"
            style="@style/Label" />

        <TextView
            android:id="@+id/textEndValue"
            android:layout_column="1"
            android:layout_row="4"
            style="@style/Value" />
    </GridLayout>

</ScrollView>
